Print all JVM Flags